--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MyU</title>
+    <link rel="stylesheet" href="./login.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="containter">
+      <div class="inputContainer">
+        <div class="titleBox">
+          <p class="idTitle">아이디</p>
+          <p class="pwTitle">비밀번호</p>
+        </div>
+        <div class="inputBox">
+          <input
+            class="idInput"
+            type="text"
+            placeholder="아이디를 입력하세요"
+          />
+          <input
+            class="pwInput"
+            type="password"
+            placeholder="비밀번호를 입력하세요"
+          />
+        </div>
+      </div>
+      <button class="loginBtn">로그인</button>
+    </div>
+  </body>
 </html>
