refactor:header&footer 추가

--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
-    <p>여기는 푸터입니다.</p>
+    <div class="footer">
+      <div class="goTo"></div>
+    </div>
   </body>
 </html>
