--- a/src/header/header.html
+++ b/src/header/header.html
@@ -7,6 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    <p>헤더입니다.</p>
+    <div class="header">
+      <div class="logo">My-U</div>
+      <div class="longLine"></div>
+      <div class="midLine"></div>
+      <div class="shortLine"></div>
+      <div class="mypage">마이페이지</div>
+    </div>
   </body>
 </html>
