--- a/src/test/test1.html
+++ b/src/test/test1.html
@@ -20,10 +20,10 @@
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test1.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
+                    <button class="answer">마루</button>
                     <button class="answer">메로</button>
                 </div>
             </div>
@@ -32,6 +32,9 @@
                     명지대학교의 귀여운 마스코트의 이름은?
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
