--- a/src/test/test10.html
+++ b/src/test/test10.html
@@ -16,22 +16,30 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">10</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test10.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">
+                        공간보단 학교에 나와서 동기들과 활동하고<br/>
+                        수업 듣는 게 좋은데?
+                    </button>
+                    <button class="answer">
+                        월공강, 금공강... 그런 것보다는<br/>
+                        역시 공강은 다다익선이지.
+                    </button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    당신이 공강을 떠올리면 드는 생각은?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
