--- a/src/test/test2.html
+++ b/src/test/test2.html
@@ -16,22 +16,24 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">02</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test2.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">학교 내부에 있을 만한 곳을 찾아다닌다.</button>
+                    <button class="answer">알고 있는 주변 카페로 향한다.</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    적적한 공간 시간에 당신은 주로 어디에?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
