--- a/src/test/test4.html
+++ b/src/test/test4.html
@@ -16,22 +16,28 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">04</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test4.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">도서관은 시험 기간에만 24시간이었지...?<br/>
+                        스터디 카페에 갈래래</button>
+                    <button class="answer">도서관은 늘 24시간 개방이잖아?<br/>
+                        역시 대학생은 도서관이지!</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
+                    시험 기간도 아니지만 12시가 훌쩍 넘은 시간에도 <br/>                
+                    공부하려는 멋진 당신! 오늘은 어디서 공부할까?
                 </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
