--- a/src/test/test5.html
+++ b/src/test/test5.html
@@ -16,22 +16,25 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">05</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test5.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">당연히 가능하지!</button>
+                    <button class="answer">흠... 안 될 것 같아.</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    벼락치기로 토익 800점이라니, 나 자신 대단해!<br/>
+                    이제 이걸로 세계화 장학금도도 받을 수 있을까?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
