--- a/src/test/test6.html
+++ b/src/test/test6.html
@@ -16,22 +16,25 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">06</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test6.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">역시 우리 학교 에브리** 커뮤니티가 최고지!</button>
+                    <button class="answer">흠... 교내 일자리 지원센터로 가 볼까?</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    내가 벌써 4학년이라니...<br/>
+                    이제 슬슬 취업 준비를 해야 하는데 어디서 정보를 얻지?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
