--- a/src/test/test7.html
+++ b/src/test/test7.html
@@ -16,22 +16,25 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">07</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test7.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">공간엔 휴식이지! 침대가 있는 휴게실에 가자</button>
+                    <button class="answer">‘휴게실이 어디...?’ <br/>
+                        일단 도서관으로 향한다</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    오늘 휴강이라고?  흠... 공간 동안 뭐 하지?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
