--- a/src/test/test8.html
+++ b/src/test/test8.html
@@ -16,22 +16,30 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">08</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test8.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">
+                        ‘지름길이 있어...?’ <br/>
+                        부지런히 지도 보며 걸어다닌다.
+                    </button>
+                    <button class="answer">
+                        ‘학교 내 최소 경로 이동은 국룰!’<br/>
+                        나만의 지름길을 통해 강의실로 이동한다.
+                    </button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    다음 수업을 듣기 위해 내가 학교 건물을 이동하는 방법은?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
