--- a/src/test/test9.html
+++ b/src/test/test9.html
@@ -16,22 +16,24 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">09</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test9.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">많이 참여해 보지 않아서 잘 모른다.</button>
+                    <button class="answer">후후. 내 최애는 축제다.</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    학교 축제, 동아리 부스 등의 내가 좋아하는 학교 행사는?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
