--- a/src/test/test3.html
+++ b/src/test/test3.html
@@ -16,22 +16,25 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">03</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <div class="photo"></div>
+                    <img src="/image/test3.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">마루</ㅠ>
-                    <button class="answer">메로</button>
+                    <button class="answer">학교 근처 골목 사이 사이 맛집을 찾자!</button>
+                    <button class="answer">학식 말고 뭐가 또 있나...?</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
-                </div>
+                    어느덧 기다리고 기다리던 점심시간!<br/>
+                    당신의 발걸음은 어디로?                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div class="goTo"></div>
         </div>
     </div>
 </body>
