--- a/src/test/test10.html
+++ b/src/test/test10.html
@@ -23,11 +23,11 @@
                     <img src="/image/test10.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">
+                    <button class="answer" onclick="location.href='test1.html'">
                         공간보단 학교에 나와서 동기들과 활동하고<br/>
                         수업 듣는 게 좋은데?
                     </button>
-                    <button class="answer">
+                    <button class="answer" onclick="location.href='test21.html'">
                         월공강, 금공강... 그런 것보다는<br/>
                         역시 공강은 다다익선이지.
                     </button>
