--- a/src/test/test2.html
+++ b/src/test/test2.html
@@ -23,8 +23,8 @@
                     <img src="/image/test2.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">학교 내부에 있을 만한 곳을 찾아다닌다.</button>
-                    <button class="answer">알고 있는 주변 카페로 향한다.</button>
+                    <button class="answer" onclick="location.href='test3.html'">학교 내부에 있을 만한 곳을 찾아다닌다.</button>
+                    <button class="answer" onclick="location.href='test3.html'">알고 있는 주변 카페로 향한다.</button>
                 </div>
             </div>
             <div class="body_footer">
