--- a/src/test/test3.html
+++ b/src/test/test3.html
@@ -23,8 +23,8 @@
                     <img src="/image/test3.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">학교 근처 골목 사이 사이 맛집을 찾자!</button>
-                    <button class="answer">학식 말고 뭐가 또 있나...?</button>
+                    <button class="answer" onclick="location.href='test4.html'">학교 근처 골목 사이 사이 맛집을 찾자!</button>
+                    <button class="answer" onclick="location.href='test4.html'">학식 말고 뭐가 또 있나...?</button>
                 </div>
             </div>
             <div class="body_footer">
