--- a/src/test/test4.html
+++ b/src/test/test4.html
@@ -23,9 +23,9 @@
                     <img src="/image/test4.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">도서관은 시험 기간에만 24시간이었지...?<br/>
+                    <button class="answer" onclick="location.href='test5.html'">도서관은 시험 기간에만 24시간이었지...?<br/>
                         스터디 카페에 갈래래</button>
-                    <button class="answer">도서관은 늘 24시간 개방이잖아?<br/>
+                    <button class="answer" onclick="location.href='test5.html'">도서관은 늘 24시간 개방이잖아?<br/>
                         역시 대학생은 도서관이지!</button>
                 </div>
             </div>
