--- a/src/test/test5.html
+++ b/src/test/test5.html
@@ -23,8 +23,8 @@
                     <img src="/image/test5.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">당연히 가능하지!</button>
-                    <button class="answer">흠... 안 될 것 같아.</button>
+                    <button class="answer" onclick="location.href='test6.html'">당연히 가능하지!</button>
+                    <button class="answer" onclick="location.href='test6.html'">흠... 안 될 것 같아.</button>
                 </div>
             </div>
             <div class="body_footer">
