--- a/src/test/test7.html
+++ b/src/test/test7.html
@@ -23,8 +23,8 @@
                     <img src="/image/test7.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">공간엔 휴식이지! 침대가 있는 휴게실에 가자</button>
-                    <button class="answer">‘휴게실이 어디...?’ <br/>
+                    <button class="answer" onclick="location.href='test8.html'">공간엔 휴식이지! 침대가 있는 휴게실에 가자</button>
+                    <button class="answer" onclick="location.href='test8.html'">‘휴게실이 어디...?’ <br/>
                         일단 도서관으로 향한다</button>
                 </div>
             </div>
