--- a/src/test/test9.html
+++ b/src/test/test9.html
@@ -23,8 +23,8 @@
                     <img src="/image/test9.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">많이 참여해 보지 않아서 잘 모른다.</button>
-                    <button class="answer">후후. 내 최애는 축제다.</button>
+                    <button class="answer" onclick="location.href='test10.html'">많이 참여해 보지 않아서 잘 모른다.</button>
+                    <button class="answer" onclick="location.href='test10.html'">후후. 내 최애는 축제다.</button>
                 </div>
             </div>
             <div class="body_footer">
