--- a/src/test/test6.html
+++ b/src/test/test6.html
@@ -23,8 +23,8 @@
                     <img src="/image/test6.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">역시 우리 학교 에브리** 커뮤니티가 최고지!</button>
-                    <button class="answer">흠... 교내 일자리 지원센터로 가 볼까?</button>
+                    <button class="answer" onclick="location.href='test7.html'">역시 우리 학교 에브리** 커뮤니티가 최고지!</button>
+                    <button class="answer" onclick="location.href='test7.html'">흠... 교내 일자리 지원센터로 가 볼까?</button>
                 </div>
             </div>
             <div class="body_footer">
