--- a/src/test/test8.html
+++ b/src/test/test8.html
@@ -23,11 +23,11 @@
                     <img src="/image/test8.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer">
+                    <button class="answer" onclick="location.href='test9.html'">
                         ‘지름길이 있어...?’ <br/>
                         부지런히 지도 보며 걸어다닌다.
                     </button>
-                    <button class="answer">
+                    <button class="answer" onclick="location.href='test9.html'">
                         ‘학교 내 최소 경로 이동은 국룰!’<br/>
                         나만의 지름길을 통해 강의실로 이동한다.
                     </button>
