fix: footer, header 연결 및 컴포넌트화

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="./include.js" defer></script>
   </head>
   <body>
-    <header data-include="./src/header/header.html"></header>
+    <header data-include="../src/header/header.html"></header>
     <p class="title">2조 fronted</p>
     <main data-include="./src/main/main.html"></main>
     <footer data-include="./src/footer/footer.html"></footer>
