--- a/src/header/header.html
+++ b/src/header/header.html
@@ -4,15 +4,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="header.css" />
     <title>Document</title>
+    <style>
+      .container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+      }
+
+      .header {
+        width: 73%;
+        height: 13%;
+        margin-top: 4%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+      }
+      .logo {
+        left: 0%;
+        right: 74.01%;
+        top: 0%;
+        bottom: 0%;
+
+        font-family: "Shrikhand";
+        font-style: italic;
+        font-weight: 400;
+        font-size: 80px;
+        line-height: 117px;
+        display: flex;
+        align-items: center;
+        text-transform: capitalize;
+
+        color: #191b41;
+      }
+      .longLine {
+        width: 31%;
+        margin-left: 15%;
+        border: 4px solid #94addf;
+      }
+      .midLine {
+        width: 8%;
+        border: 4px solid #94addf;
+      }
+      .shortLine {
+        width: 3.8;
+        border: 4px solid #94addf;
+      }
+      .mypage {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 8px 40px;
+        border: 2px solid #3e397e;
+        border-radius: 24px;
+
+        /* font */
+        font-family: "Open Sans";
+        font-style: normal;
+        font-weight: 700;
+        font-size: 16px;
+        color: #0a2640;
+      }
+    </style>
   </head>
   <body>
-    <div class="header">
-      <div class="logo">My-U</div>
-      <div class="longLine"></div>
-      <div class="midLine"></div>
-      <div class="shortLine"></div>
-      <div class="mypage">마이페이지</div>
+    <div class="container">
+      <div class="header">
+        <div class="logo">My-U</div>
+        <div class="longLine"></div>
+        <div class="midLine"></div>
+        <div class="shortLine"></div>
+        <div class="mypage">마이페이지</div>
+      </div>
     </div>
   </body>
 </html>
