style: test1-5 오타 수정

--- a/src/test/test5.html
+++ b/src/test/test5.html
@@ -30,7 +30,7 @@
             <div class="body_footer">
                 <div class="question">
                     벼락치기로 토익 800점이라니, 나 자신 대단해!<br/>
-                    이제 이걸로 세계화 장학금도도 받을 수 있을까?                </div>
+                    이제 이걸로 세계화 장학금도 받을 수 있을까?                </div>
             </div>
         </div>
         <div class="footer">
