feat: header, footer 링크 연결

--- a/src/header/header.html
+++ b/src/header/header.html
@@ -36,8 +36,11 @@
         display: flex;
         align-items: center;
         text-transform: capitalize;
-
         color: #191b41;
+      }
+
+      .link {
+        text-decoration: none;
       }
       .longLine {
         width: 31%;
@@ -73,7 +76,9 @@
   <body>
     <div class="container">
       <div class="header">
-        <div class="logo">My-U</div>
+        <a href="../main/main.html" class="link">
+          <div class="logo">My-U</div>
+        </a>
         <div class="longLine"></div>
         <div class="midLine"></div>
         <div class="shortLine"></div>
