--- a/src/smallFooter/smallFooter.html
+++ b/src/smallFooter/smallFooter.html
@@ -7,14 +7,13 @@
     <title>Document</title>
     <style>
       footer {
-        position: flex;
+        position: static;
         width: 100%;
         height: 130px;
         bottom: 0;
         display: flex;
         justify-content: end;
         align-items: end;
-        margin-top: 1%;
       }
       .githubIcon {
         width: 22px;
