--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MyU</title>
+    <title>MyU_Login</title>
     <link rel="stylesheet" href="./login.css" />
+    <script src="../../include.js" defer></script>
   </head>
   <body>
+    <header data-include="../header/header.html"></header>
     <div class="containter">
       <div class="inputContainer">
         <div class="titleBox">
@@ -29,5 +31,6 @@
       </div>
       <button class="loginBtn">로그인</button>
     </div>
+    <footer data-include="../smallFooter/smallFooter.html"></footer>
   </body>
 </html>
