--- a/src/test/test10.html
+++ b/src/test/test10.html
@@ -12,7 +12,7 @@
             <div class="longLine"></div>
             <div class="midLine"></div>
             <div class="shortLine"></div>
-            <div class="mypage">마이페이지</div>
+            <button class="logout" onclick="location.href='../login/login.html'">로그아웃</button>
         </div>
         <div class="body">
             <div class="body_header">
@@ -27,7 +27,7 @@
                         공간보단 학교에 나와서 동기들과 활동하고<br/>
                         수업 듣는 게 좋은데?
                     </button>
-                    <button class="answer" onclick="location.href='test21.html'">
+                    <button class="answer" onclick="location.href='test1.html'">
                         월공강, 금공강... 그런 것보다는<br/>
                         역시 공강은 다다익선이지.
                     </button>
@@ -35,7 +35,8 @@
             </div>
             <div class="body_footer">
                 <div class="question">
-                    당신이 공강을 떠올리면 드는 생각은?                </div>
+                    당신이 공강을 떠올리면 드는 생각은?                
+                </div>
             </div>
         </div>
         <div class="footer">
