--- a/src/test/test5.html
+++ b/src/test/test5.html
@@ -12,7 +12,7 @@
             <div class="longLine"></div>
             <div class="midLine"></div>
             <div class="shortLine"></div>
-            <div class="mypage">마이페이지</div>
+            <button class="logout" onclick="location.href='../login/login.html'">로그아웃</button>
         </div>
         <div class="body">
             <div class="body_header">
