동아리테스트 UI 구현 및 파일 구조 정리

--- a/src/campusLifeTest/test2.html
+++ b/src/campusLifeTest/test2.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
@@ -16,21 +16,20 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">03</div>
+                 <div class="number">02</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test3.png" class="photo"></img>
+                    <img src="/image/campusLifeTest/test2.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test4.html'">학교 근처 골목 사이 사이 맛집을 찾자!</button>
-                    <button class="answer" onclick="location.href='test4.html'">학식 말고 뭐가 또 있나...?</button>
+                    <button class="answer" onclick="location.href='test3.html'">학교 내부에 있을 만한 곳을 찾아다닌다.</button>
+                    <button class="answer" onclick="location.href='test3.html'">알고 있는 주변 카페로 향한다.</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    어느덧 기다리고 기다리던 점심시간!<br/>
-                    당신의 발걸음은 어디로?                </div>
+                    적적한 공간 시간에 당신은 주로 어디에?                </div>
             </div>
         </div>
         <div class="footer">
