--- a/src/campusLifeTest/test4.html
+++ b/src/campusLifeTest/test4.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
@@ -16,26 +16,24 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">08</div>
+                 <div class="number">04</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test8.png" class="photo"></img>
+                    <img src="/image/campusLifeTest/test4.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test9.html'">
-                        ‘지름길이 있어...?’ <br/>
-                        부지런히 지도 보며 걸어다닌다.
-                    </button>
-                    <button class="answer" onclick="location.href='test9.html'">
-                        ‘학교 내 최소 경로 이동은 국룰!’<br/>
-                        나만의 지름길을 통해 강의실로 이동한다.
-                    </button>
+                    <button class="answer" onclick="location.href='test5.html'">도서관은 시험 기간에만 24시간이었지...?<br/>
+                        스터디 카페에 갈래래</button>
+                    <button class="answer" onclick="location.href='test5.html'">도서관은 늘 24시간 개방이잖아?<br/>
+                        역시 대학생은 도서관이지!</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    다음 수업을 듣기 위해 내가 학교 건물을 이동하는 방법은?                </div>
+                    시험 기간도 아니지만 12시가 훌쩍 넘은 시간에도 <br/>                
+                    공부하려는 멋진 당신! 오늘은 어디서 공부할까?
+                </div>
             </div>
         </div>
         <div class="footer">
