--- a/src/clubTest/test3.html
+++ b/src/clubTest/test3.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
@@ -16,21 +16,27 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">06</div>
+                 <div class="number">03</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test6.png" class="photo"></img>
+                    <img src="/image/clubTest/test3.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test7.html'">역시 우리 학교 에브리** 커뮤니티가 최고지!</button>
-                    <button class="answer" onclick="location.href='test7.html'">흠... 교내 일자리 지원센터로 가 볼까?</button>
+                    <button class="answer" onclick="location.href='test4.html'">
+                        내일 늦으면 어떡하지? 혹시 등굣길에 <br/>
+                        좀비가 나오면...  상상의 나래를 펼친다.                    
+                    </button>
+                    <button class="answer" onclick="location.href='test4.html'">
+                        흠... 간단히 할 일을 계획하고 잠에 든다.                   
+                     </button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    내가 벌써 4학년이라니...<br/>
-                    이제 슬슬 취업 준비를 해야 하는데 어디서 정보를 얻지?                </div>
+                    드디어 내일이 이번 학기 첫 날이다!<br/>
+                    등교 전 날 밤, 잠들기 전 나는 보통 어떤 모습일까?               
+                </div>
             </div>
         </div>
         <div class="footer">
