--- a/src/clubTest/test6.html
+++ b/src/clubTest/test6.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
@@ -16,21 +16,27 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">05</div>
+                 <div class="number">06</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test5.png" class="photo"></img>
+                    <img src="/image/clubTest/test6.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test6.html'">당연히 가능하지!</button>
-                    <button class="answer" onclick="location.href='test6.html'">흠... 안 될 것 같아.</button>
+                    <button class="answer" onclick="location.href='test7.html'">
+                        흥얼거리거나 속으로 따라 부른다.<br/>
+                        ‘unforgiven... unforgiven ~ ‘</button>
+                    <button class="answer" onclick="location.href='test7.html'">
+                        노래에 맞추어 조금씩 리듬을 탄다. <br/>
+                        Yo... music is my life...
+                    </button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    벼락치기로 토익 800점이라니, 나 자신 대단해!<br/>
-                    이제 이걸로 세계화 장학금도 받을 수 있을까?                </div>
+                    길을 걷다 내가 좋아하는 노래가 흘러나온다.<br/>
+                    이때 나의 반응은?               
+                </div>
             </div>
         </div>
         <div class="footer">
