--- a/src/campusLifeTest/test1.html
+++ b/src/campusLifeTest/test1.html
@@ -2,8 +2,20 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    <script
+    src="../login/login.html" defer
+    >
+        function nextPage(){
+            document.getElementById("contentFrame").setAttribute("src", "text2.html")
+        }
+        function logout(){
+            document.getElementById("contentFrame").setAttribute("../login", "login.html")
+        }
+    </script>
+
 </head>
 <body>
     <div class="background">
@@ -16,23 +28,20 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">04</div>
+                 <div class="number">01</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test4.png" class="photo"></img>
+                    <img src="/image/campusLifeTest/test1.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test5.html'">도서관은 시험 기간에만 24시간이었지...?<br/>
-                        스터디 카페에 갈래래</button>
-                    <button class="answer" onclick="location.href='test5.html'">도서관은 늘 24시간 개방이잖아?<br/>
-                        역시 대학생은 도서관이지!</button>
+                    <button class="answer" onclick="location.href='test2.html'">마루</button>
+                    <button class="answer" onclick="location.href='test2.html'">메로</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    시험 기간도 아니지만 12시가 훌쩍 넘은 시간에도 <br/>                
-                    공부하려는 멋진 당신! 오늘은 어디서 공부할까?
+                    명지대학교의 귀여운 마스코트의 이름은?
                 </div>
             </div>
         </div>
