--- a/src/campusLifeTest/test10.html
+++ b/src/campusLifeTest/test10.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
@@ -20,7 +20,7 @@
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test10.png" class="photo"></img>
+                    <img src="/image/campusLifeTest/test10.png" class="photo"></img>
                 </div>
                 <div class="body_right">
                     <button class="answer" onclick="location.href='test1.html'">
