--- a/src/campusLifeTest/test5.html
+++ b/src/campusLifeTest/test5.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
@@ -16,20 +16,21 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">09</div>
+                 <div class="number">05</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test9.png" class="photo"></img>
+                    <img src="/image/campusLifeTest/test5.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test10.html'">많이 참여해 보지 않아서 잘 모른다.</button>
-                    <button class="answer" onclick="location.href='test10.html'">후후. 내 최애는 축제다.</button>
+                    <button class="answer" onclick="location.href='test6.html'">당연히 가능하지!</button>
+                    <button class="answer" onclick="location.href='test6.html'">흠... 안 될 것 같아.</button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    학교 축제, 동아리 부스 등의 내가 좋아하는 학교 행사는?                </div>
+                    벼락치기로 토익 800점이라니, 나 자신 대단해!<br/>
+                    이제 이걸로 세계화 장학금도 받을 수 있을까?                </div>
             </div>
         </div>
         <div class="footer">
