--- a/src/clubTest/test8.html
+++ b/src/clubTest/test8.html
@@ -2,20 +2,8 @@
 <html lang="ko">
 <head>
     <title>MyU_Test</title>
-    <link href="./testPage.css" rel="stylesheet">
+    <link href="../css/testPage.css" rel="stylesheet">
     <link rel="stylesheet" href="<https://pro.fontawesome.com/releases/v5.10.0/css/all.css>" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
-    <script
-    src="../login/login.html" defer
-    >
-        function nextPage(){
-            document.getElementById("contentFrame").setAttribute("src", "text2.html")
-        }
-        function logout(){
-            document.getElementById("contentFrame").setAttribute("../login", "login.html")
-        }
-    </script>
-
 </head>
 <body>
     <div class="background">
@@ -28,20 +16,26 @@
         </div>
         <div class="body">
             <div class="body_header">
-                 <div class="number">01</div>
+                 <div class="number">08</div>
             </div>
             <div class="body_body">
                 <div class="body_left">
-                    <img src="/image/test1.png" class="photo"></img>
+                    <img src="/image/clubTest/test8.png" class="photo"></img>
                 </div>
                 <div class="body_right">
-                    <button class="answer" onclick="location.href='test2.html'">마루</button>
-                    <button class="answer" onclick="location.href='test2.html'">메로</button>
+                    <button class="answer" onclick="location.href='test1.html'">
+                        음? 오히려 좋아. <br/>
+                        발표... 맡겨 줘!
+                    </button>
+                    <button class="answer" onclick="location.href='test1.html'">
+                        으... 발표 싫어. 제발 누군가 해 줘...
+                    </button>
                 </div>
             </div>
             <div class="body_footer">
                 <div class="question">
-                    명지대학교의 귀여운 마스코트의 이름은?
+                    교내 조별 활동에서 발표에 자원한 사람이 없다.
+                    이때 나는?                 
                 </div>
             </div>
         </div>
