feat: header 링크 연결

--- a/src/header/header.html
+++ b/src/header/header.html
@@ -5,7 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="header.css" />
-    <title>Document</title>
+    <title>header</title>
+    <script>
+      // let isLogin = document.querySelectorAll("button");
+
+      // li.forEach(function (item) {
+      //   // if(item.classList.contains("red")){
+      //   //   item.innerHTML="red"
+      //   // }
+      //   item.classList.contains("")
+      //     ? (item.innerHTML = "red")
+      //     : console.log("?");
+      // });
+    </script>
     <style>
       .container {
         display: flex;
@@ -55,21 +67,53 @@
         width: 3.8;
         border: 4px solid #94addf;
       }
-      .mypage {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        padding: 8px 40px;
+
+      .dropbtn {
         border: 2px solid #3e397e;
         border-radius: 24px;
+        padding: 8px 40px;
+        gap: 8px;
+        background-color: #ffffff;
 
-        /* font */
-        font-family: "Open Sans";
-        font-style: normal;
         font-weight: 700;
         font-size: 16px;
+        line-height: 24px;
         color: #0a2640;
+      }
+
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #ffffff;
+        min-width: 140px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        border-radius: 10px;
+      }
+
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+
+      .dropdown-content a:hover {
+        /* item hover시 */
+        background-color: #ffeefc;
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+
+      .dropdown:hover .dropbtn {
+        background-color: #feeeff;
       }
     </style>
   </head>
@@ -82,7 +126,22 @@
         <div class="longLine"></div>
         <div class="midLine"></div>
         <div class="shortLine"></div>
-        <div class="mypage">마이페이지</div>
+        <div class="dropdown">
+          <!-- 드롭다운 박스 아직 구현못했습니다. 수정하면 다시 올리겠습니다. -->
+          <button
+            class="dropbtn"
+            value="${isLogin ? '마이페이지' : '로그인'}"
+            isLogin="true"
+          >
+            로그인
+          </button>
+          <div class="dropdown-content">
+            <a href="../myPage/myPage.html">마이페이지</a>
+            <a href="../luckydraw/luckydraw.html">운세뽑기</a>
+            <a href="#">로그아웃</a>
+          </div>
+        </div>
+        <!-- <div class="mypage">마이페이지</div> -->
       </div>
     </div>
   </body>
