--- a/src/luckydraw/luckydrawResult.html
+++ b/src/luckydraw/luckydrawResult.html
@@ -12,19 +12,13 @@
     <header data-include="../header/header.html"></header>
     <div class="container">
       <p class="title">오늘의 운세</p>
-      <div class="box">
+      <div class="resultContainer">
+        <p class="score">여기에 학점</p>
+        <p class="text">여기에 운세</p>
         <img
-          src="../../image/luckydraw/001.png"
-          alt="선물 이미지"
-          class="present"
-        />
-        <a href="../luckydraw/luckydrawResult.html">
-          <button class="selectBtn">뽑기</button>
-        </a>
-        <img
-          src="../../image/luckydraw/002.png"
+          src="../../image/luckydraw/003.png"
           alt="뽑기 이미지"
-          class="choice"
+          class="cat"
         />
       </div>
     </div>
